WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72470
Fix some hash traits that don't derive from the base hash traits
https://bugs.webkit.org/show_bug.cgi?id=72470
Summary
Fix some hash traits that don't derive from the base hash traits
Darin Adler
Reported
2011-11-15 23:29:27 PST
Fix some HashTraits that don't derive from the base hash traits
Attachments
Patch
(2.92 KB, patch)
2011-11-15 23:32 PST
,
Darin Adler
fpizlo
: review+
fpizlo
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2011-11-15 23:32:29 PST
Created
attachment 115330
[details]
Patch
Darin Adler
Comment 2
2011-11-16 00:05:46 PST
Committed
r100417
: <
http://trac.webkit.org/changeset/100417
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug